--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -31,7 +31,7 @@
     <ListView
         android:id="@+id/orderListView"
         android:layout_width="match_parent"
-        android:layout_height="475dp"
+        android:layout_height="395dp"
         app:layout_constraintTop_toBottomOf="@+id/mp_actionbar"
         tools:layout_editor_absoluteX="0dp" />
 
@@ -43,25 +43,37 @@
         android:text="TOTAL A PAGAR: R$  "
         android:textColor="#040000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/closeAccount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.327"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/orderListView">
-    </TextView>
+        app:layout_constraintTop_toBottomOf="@+id/orderListView"></TextView>
 
     <TextView
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="125"
-        android:textColor="#FF5722"
         android:fontFamily="@font/m_bold"
+        android:text="0.0"
+        android:textColor="#FF5722"
         android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/closeAccount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/tv"
-        app:layout_constraintTop_toBottomOf="@+id/orderListView"/>
+        app:layout_constraintTop_toBottomOf="@+id/orderListView" />
+
+    <TextView
+        android:id="@+id/tableText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="Table: 8"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/tv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/tv" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
